Added proper alex model support to HDSkins. Skin servers should remember what the "model" parameter was when saving a skin and include it in their responses.

--- a/resources/assets/hdskins/lang/en_us.lang
+++ b/resources/assets/hdskins/lang/en_us.lang
@@ -17,6 +17,7 @@ hdskins.upload=Uploading skin please wait...
 hdskins.local=Local Skin
 hdskins.server=Server Skin
 
-hdskins.mode.skin=Skin
+hdskins.mode.skin=Skin (Steve)
+hdskins.mode.skinny=Skin (Alex)
 hdskins.mode.elytra=Elytra
 
