--- a/src/hdskins/resources/assets/hdskins/lang/en_us.lang
+++ b/src/hdskins/resources/assets/hdskins/lang/en_us.lang
@@ -24,6 +24,9 @@ hdskins.mode.skin=%s
 
 hdskins.options.chevy=>>
 hdskins.options.chevy.title=Upload Skin
+hdskins.options.download=<<
+hdskins.options.download.title=Save Skin
+
 hdskins.options.close=Close
 hdskins.options.clear=Clear
 hdskins.options.browse=Browse
