--- a/src/hdskins/resources/assets/hdskins/lang/ru_ru.lang
+++ b/src/hdskins/resources/assets/hdskins/lang/ru_ru.lang
@@ -17,7 +17,20 @@ hdskins.upload=Загрузка скина, пожалуйста, подожди
 hdskins.local=Локальный скин
 hdskins.server=Скин на сервере
 
-hdskins.mode.skin=Скин (Стандартный)
+hdskins.mode.skin=%s
 hdskins.mode.skinny=Скин (Тонкие ноги)
 hdskins.mode.elytra=Надкрылья
 
+hdskins.options.chevy=>>
+hdskins.options.chevy.title=Upload Skin
+hdskins.options.download=<<
+hdskins.options.download.title=Save Skin
+
+hdskins.options.close=Close
+hdskins.options.clear=Clear
+hdskins.options.browse=Browse
+
+hdskins.options.skindrops=Experimental Skin Drop
+hdskins.options.cache=Clear Skin Cache
+
+hdskins.warning.experimental=§6WARNING: This feature is §4experimental§6, meaning things may break or derp or even slurp. Enabling this means you accept responsibility for what may happen to your chickens.
