--- a/src/hdskins/resources/assets/hdskins/lang/en_us.lang
+++ b/src/hdskins/resources/assets/hdskins/lang/en_us.lang
@@ -27,6 +27,10 @@ hdskins.mode.alex=Alex Model
 
 hdskins.mode.skin=%s
 
+hdskins.mode.stand=Standing
+hdskins.mode.sleep=Sleeping
+hdskins.mode.ride=Riding
+
 hdskins.options.chevy=>>
 hdskins.options.chevy.title=Upload Skin
 hdskins.options.download=<<
