--- a/src/hdskins/resources/assets/hdskins/lang/fr_fr.lang
+++ b/src/hdskins/resources/assets/hdskins/lang/fr_fr.lang
@@ -21,7 +21,13 @@ hdskins.server=Server Skin
 hdskins.mode.steve=Steve Model
 hdskins.mode.alex=Alex Model
 
-hdskins.mode.skin=%s
+hdskins.mode.skin=Player Texture
+hdskins.mode.cape=Cape Texture
+hdskins.mode.elytra=Elytra Texture
+
+hdskins.mode.stand=Standing
+hdskins.mode.sleep=Sleeping
+hdskins.mode.ride=Riding
 
 hdskins.options.chevy=>>
 hdskins.options.chevy.title=Upload Skin
@@ -36,3 +42,5 @@ hdskins.options.skindrops=Experimental Skin Drop
 hdskins.options.cache=Clear Skin Cache
 
 hdskins.warning.experimental=§6WARNING: This feature is §4experimental§6, meaning things may break or derp or even slurp. Enabling this means you accept responsibility for what may happen to your chickens.
+hdskins.warning.disabled.title=§c%s %s
+hdskins.warning.disabled.description=§4(DISABLED)\n§7This feature is not supported by your current skin server.\n§7Please choose a different one to proceed.
