--- a/src/main/resources/assets/hdskins/lang/en_us.json
+++ b/src/main/resources/assets/hdskins/lang/en_us.json
@@ -11,6 +11,11 @@
   "hdskins.error.noserver": "There was no valid skin server available",
   "hdskins.error.offline": "- Server Offline -",
   "hdskins.open.title": "Choose skin",
+  "hdskins.directory.up": "Parent Directory",
+  "hdskins.directory.go": "->",
+  "hdskins.filetype.directory": "Directory",
+  "hdskins.filetype.file": "%s File",
+  "hdskins.filetype.unknown": "File",
   "hdskins.save.title": "Choose save location",
   "hdskins.fetch": "Fetching skin...",
   "hdskins.failed": "Uploading skin failed",
