--- a/src/main/resources/assets/hdskins/lang/en_us.json
+++ b/src/main/resources/assets/hdskins/lang/en_us.json
@@ -13,6 +13,7 @@
   "hdskins.open.title": "Choose skin",
   "hdskins.directory.up": "Parent Directory",
   "hdskins.directory.go": "->",
+  "hdskins.directory.save": "Save",
   "hdskins.filetype.directory": "Directory",
   "hdskins.filetype.file": "%s File",
   "hdskins.filetype.unknown": "File",
