--- a/src/main/resources/assets/hdskins/lang/en_us.json
+++ b/src/main/resources/assets/hdskins/lang/en_us.json
@@ -32,6 +32,13 @@
   "hdskins.mode.stand": "Standing",
   "hdskins.mode.sleep": "Sleeping",
   "hdskins.mode.ride": "Riding",
+  "hdskins.equipment": "Equipment: %s",
+  "hdskins.equipment.empty": "None",
+  "hdskins.equipment.leather": "Leather Armour",
+  "hdskins.equipment.iron": "Iron Armour",
+  "hdskins.equipment.gold": "Golden Armour",
+  "hdskins.equipment.diamond": "Diamond Armour",
+  "hdskins.equipment.turtle": "Turtle Helmet",
   "hdskins.options.chevy": ">>",
   "hdskins.options.chevy.title": "Upload Skin",
   "hdskins.options.download": "<<",
