Added a translation string for the swimming pose

--- a/src/main/resources/assets/hdskins/lang/en_us.json
+++ b/src/main/resources/assets/hdskins/lang/en_us.json
@@ -32,6 +32,7 @@
   "hdskins.mode.stand": "Standing",
   "hdskins.mode.sleep": "Sleeping",
   "hdskins.mode.ride": "Riding",
+  "hdskins.mode.swim": "Swimming",
   "hdskins.equipment": "Equipment: %s",
   "hdskins.equipment.empty": "None",
   "hdskins.equipment.leather": "Leather Armour",
