--- a/src/main/resources/assets/hdskins/lang/ru_ru.json
+++ b/src/main/resources/assets/hdskins/lang/ru_ru.json
@@ -12,6 +12,12 @@
   "hdskins.error.offline": "- Сервер не в сети -",
   "hdskins.open.title": "Выберите ваш скин",
   "hdskins.save.title": "Выберите имя файла для сохранения...",
+  "hdskins.directory.go": "->",
+  "hdskins.directory.save": "Сохранить",
+  "hdskins.directory.up": "Родительский каталог",
+  "hdskins.filetype.directory": "Каталог",
+  "hdskins.filetype.file": "%s-файл",
+  "hdskins.filetype.unknown": "Файл",
   "hdskins.fetch": "Скачивание скина...",
   "hdskins.failed": "Загрузка скина не удалась",
   "hdskins.request": "Отправка запроса на сервер, пожалуйста, подождите.",
@@ -26,6 +32,14 @@
   "hdskins.mode.stand": "Обычная поза",
   "hdskins.mode.sleep": "Поза сна",
   "hdskins.mode.ride": "Сидячая поза",
+  "hdskins.mode.swim": "Поза плавания",
+  "hdskins.equipment": "Экипировка: %s",
+  "hdskins.equipment.diamond": "Алмазная броня",
+  "hdskins.equipment.empty": "Отсутствует",
+  "hdskins.equipment.gold": "Золотая броня",
+  "hdskins.equipment.iron": "Железная броня",
+  "hdskins.equipment.leather": "Кожаная броня",
+  "hdskins.equipment.turtle": "Черепаший панцирь",
   "hdskins.options.chevy": ">>",
   "hdskins.options.chevy.title": "Загрузить скин",
   "hdskins.options.download": "<<",
