Fix an old bug with skin dimensions checking, and add more descriptive error messages

--- a/src/main/resources/assets/hdskins/lang/en_us.json
+++ b/src/main/resources/assets/hdskins/lang/en_us.json
@@ -4,6 +4,9 @@
   "hdskins.error.unreadable": "File not readable",
   "hdskins.error.ext": "File not PNG",
   "hdskins.error.open": "Error opening skin file",
+  "hdskins.error.invalid.too_large": "File must be smaller than 1024px in length",
+  "hdskins.error.invalid.shape": "Wrong dimensions",
+  "hdskins.error.invalid.power_of_two": "Wrong dimensions",
   "hdskins.error.invalid": "Not a valid skin file",
   "hdskins.error.select": "Please select a skin first",
   "hdskins.error.mojang": "Mojang API Error",
