Added a netherite armour set

--- a/src/main/resources/assets/hdskins/lang/en_us.json
+++ b/src/main/resources/assets/hdskins/lang/en_us.json
@@ -42,6 +42,7 @@
   "hdskins.equipment.iron": "Iron Armour",
   "hdskins.equipment.gold": "Golden Armour",
   "hdskins.equipment.diamond": "Diamond Armour",
+  "hdskins.equipment.netherite": "Netherite Armour",
   "hdskins.equipment.turtle": "Turtle Helmet",
   "hdskins.options.chevy": ">>",
   "hdskins.options.chevy.title": "Upload Skin",
