--- a/src/main/resources/assets/hdskins/lang/en_us.json
+++ b/src/main/resources/assets/hdskins/lang/en_us.json
@@ -15,6 +15,12 @@
   "hdskins.error.offline": "- Server Offline -",
   "hdskins.error.session": "Invalid session: Please try restarting Minecraft",
   "hdskins.open.title": "Choose skin",
+  "hdskins.directory.up": "Parent Directory",
+  "hdskins.directory.go": "->",
+  "hdskins.directory.save": "Save",
+  "hdskins.filetype.directory": "Directory",
+  "hdskins.filetype.file": "%s File",
+  "hdskins.filetype.unknown": "File",
   "hdskins.save.title": "Choose save location",
   "hdskins.fetch": "Fetching skin...",
   "hdskins.failed": "Uploading skin failed",
