Added a pose for previewing riptide

--- a/src/main/resources/assets/hdskins/lang/en_us.json
+++ b/src/main/resources/assets/hdskins/lang/en_us.json
@@ -37,6 +37,7 @@
   "hdskins.mode.sleep": "Sleeping",
   "hdskins.mode.ride": "Riding",
   "hdskins.mode.swim": "Swimming",
+  "hdskins.mode.riptide": "Using Riptide",
   "hdskins.equipment": "Equipment: %s",
   "hdskins.equipment.empty": "None",
   "hdskins.equipment.leather": "Leather Armour",
