added small translation change

--- a/src/main/resources/assets/hdskins/lang/de_de.json
+++ b/src/main/resources/assets/hdskins/lang/de_de.json
@@ -52,7 +52,7 @@
   "hdskins.options.download": "<<",
   "hdskins.options.download.title": "Skin Speichern",
   "hdskins.options.close": "Schließen",
-  "hdskins.options.clear": "Clear",
+  "hdskins.options.clear": "Löschen",
   "hdskins.options.browse": "Suchen",
   "hdskins.options.skindrops": "Experimental Skin Drop",
   "hdskins.options.cache": "Skin Cache Bereinigen",
