--- a/src/main/resources/assets/hdskins/lang/de_de.json
+++ b/src/main/resources/assets/hdskins/lang/de_de.json
@@ -1,62 +1,62 @@
 {
   "hdskins.choose": "Suche eine Datei aus",
   "hdskins.manager": "Skin Verwaltung",
-  "hdskins.error.unreadable": "Datei nicht Lesbar",
-  "hdskins.error.ext": "Datei entspricht nicht dem PNG Dateiformat",
-  "hdskins.error.open": "Fehler beim öffnen der Skin Datei",
+  "hdskins.error.unreadable": "Datei ist nicht lesbar!",
+  "hdskins.error.ext": "Datei entspricht nicht dem PNG Dateiformat!",
+  "hdskins.error.open": "Fehler beim öffnen der Skindatei!",
   "hdskins.error.invalid.too_large": "Datei muss kleiner sein als 1024px in der Länge",
-  "hdskins.error.invalid.shape": "Wrong dimensions",
-  "hdskins.error.invalid.power_of_two": "Wrong dimensions",
+  "hdskins.error.invalid.shape": "Falsche Form.",
+  "hdskins.error.invalid.power_of_two": "Falsche Form.",
   "hdskins.error.invalid": "Das ist doch kein Skin du Scherzkeks!",
   "hdskins.error.select": "Suche zuerst einen Skin aus!",
   "hdskins.error.mojang": "Mojang API Fehler",
-  "hdskins.error.mojang.wait": "Bitte warte %d Minuten",
-  "hdskins.error.noserver": "Es ist kein gültiges Skin Server verfügbar",
+  "hdskins.error.mojang.wait": "Bitte warte %d Minute(n)",
+  "hdskins.error.noserver": "Es sind keine gültiges Skinserver verfügbar!",
   "hdskins.error.offline": "- Server ist Offline -",
-  "hdskins.error.session": "Invalid session: Please try restarting Minecraft",
+  "hdskins.error.session": "Ungültige Sitzung: Bitte starten Sie Minecraft neu.",
   "hdskins.open.title": "Skin wählen",
-  "hdskins.directory.up": "Parent Directory",
+  "hdskins.directory.up": "Überverzeichnis",
   "hdskins.directory.go": "->",
   "hdskins.directory.save": "Speichern",
   "hdskins.filetype.directory": "Ordner",
   "hdskins.filetype.file": "%s Datei",
   "hdskins.filetype.unknown": "Datei",
-  "hdskins.save.title": "Choose save location",
-  "hdskins.save.overwrite": "Overwrite file?",
-  "hdskins.fetch": "Fetching skin...",
-  "hdskins.failed": "Uploading skin failed",
-  "hdskins.request": "Sende anfrage zu Skin Server bitte warten...",
-  "hdskins.upload": "Skin wird hochgeladen bitte warten...",
+  "hdskins.save.title": "Wähle einen Speicherort aus",
+  "hdskins.save.overwrite": "Datei überschreiben?",
+  "hdskins.fetch": "Skin abrufen...",
+  "hdskins.failed": "Hochladen vom Skin ist fehlgeschlagen!",
+  "hdskins.request": "Sende Anfrage zu Skinserver, bitte warten...",
+  "hdskins.upload": "Skin wird hochgeladen, bitte warten...",
   "hdskins.local": "Lokaler Skin",
   "hdskins.server": "Server Skin",
   "hdskins.mode.steve": "Steve Model",
   "hdskins.mode.alex": "Alex Model",
-  "hdskins.mode.skin": "Spieler Textur",
-  "hdskins.mode.cape": "Cape Textur",
-  "hdskins.mode.elytra": "Elytra Textur",
+  "hdskins.mode.skin": "Spielertextur",
+  "hdskins.mode.cape": "Umhangtextur",
+  "hdskins.mode.elytra": "Elytratextur",
   "hdskins.mode.stand": "Stehen",
   "hdskins.mode.sleep": "Schlafen",
   "hdskins.mode.ride": "Reiten",
   "hdskins.mode.swim": "Schwimmen",
   "hdskins.mode.riptide": "Sog benutzen",
-  "hdskins.equipment": "Equipment: %s",
-  "hdskins.equipment.empty": "None",
-  "hdskins.equipment.leather": "Leder Rüstung",
-  "hdskins.equipment.iron": "Eisen Rüstung ",
-  "hdskins.equipment.gold": "Gold Rüstung",
-  "hdskins.equipment.diamond": "Diamant Rüstung",
-  "hdskins.equipment.netherite": "Netherite Rüstung",
+  "hdskins.equipment": "Ausrüstung: %s",
+  "hdskins.equipment.empty": "Nichts",
+  "hdskins.equipment.leather": "Lederrüstung",
+  "hdskins.equipment.iron": "Eisenrüstung ",
+  "hdskins.equipment.gold": "Goldrüstung",
+  "hdskins.equipment.diamond": "Diamantrüstung",
+  "hdskins.equipment.netherite": "Netheriterüstung",
   "hdskins.equipment.turtle": "Schildkrötenpanzer",
   "hdskins.options.chevy": ">>",
   "hdskins.options.chevy.title": "Skin Hochladen",
   "hdskins.options.download": "<<",
   "hdskins.options.download.title": "Skin Speichern",
   "hdskins.options.close": "Schließen",
-  "hdskins.options.clear": "Löschen",
+  "hdskins.options.clear": "Clear",
   "hdskins.options.browse": "Suchen",
-  "hdskins.options.skindrops": "Experimental Skin Drop",
+  "hdskins.options.skindrops": "Experimenteller Skin Drop",
   "hdskins.options.cache": "Skin Cache Bereinigen",
-  "hdskins.warning.experimental": "§6WARNUNG: Dieses Feature ist §4experimentel§6, meaning things may break or derp or even slurp. Enabling this means you accept responsibility for what may happen to your chickens.",
+  "hdskins.warning.experimental": "§6WARNUNG: Dieses Feature ist §4Experimentel!§6,was heißt Dinge können(und werden) schief gehen! Mit der Aktivierung bestätigst du, Verantwortung über dich, und deine Tiere zu nehmen.",
   "hdskins.warning.disabled.title": "§c%s %s",
-  "hdskins.warning.disabled.description": "§4(DISABLED)\n§7This feature is not supported by your current skin server.\n§7Please choose a different one to proceed."
+  "hdskins.warning.disabled.description": "§4(DEAKTIVIERT)\n§7Dieses Feature wird nicht von deinem Skinserver ünterstützt.\n§7 Bitte wähle einen anderen Server."
 }
