Updated German translation (#53)
* revamped translation

* Update de_de.json

* Revert "Update de_de.json"

This reverts commit db9a67152307b8271f2742a51a0a836f8f952239.

* added small translation change

* Create de_de.json

* stop deleting my stuff

* Nein.

* Update de_de.json

Co-authored-by: NinofanTOG <117363714+NinofanTOG@users.noreply.github.com>
Co-authored-by: Doc-Anubis <109878533+Doc-Anubis@users.noreply.github.com>

--- a/src/main/resources/assets/hdskins/lang/de_de.json
+++ b/src/main/resources/assets/hdskins/lang/de_de.json
@@ -1,30 +1,62 @@
 {
-  "hdskins.choose": "Suche die datei aus",
-  "hdskins.manager": "Skin Verwalter",
-  "hdskins.error.unreadable": "Datei nicht lesbar",
-  "hdskins.error.ext": "Keine PNG Datei",
-  "hdskins.error.open": "Fehler beim öffnen der skin Datei",
-  "hdskins.error.invalid": "Das ist doch kein skin du scherzkeks",
-  "hdskins.error.select": "Bitte erst den skin auswählen",
+  "hdskins.choose": "Suche eine Datei aus",
+  "hdskins.manager": "Skin Verwaltung",
+  "hdskins.error.unreadable": "Die Datei ist nicht lesbar!",
+  "hdskins.error.ext": "Datei entspricht nicht dem PNG Dateiformat!",
+  "hdskins.error.open": "Fehler beim Öffnen der Skindatei!",
+  "hdskins.error.invalid.too_large": "Datei muss kleiner sein als 1024px in der Länge",
+  "hdskins.error.invalid.shape": "Falsche Form.",
+  "hdskins.error.invalid.power_of_two": "Falsche Form.",
+  "hdskins.error.invalid": "Das ist doch kein Skin du Scherzkeks!",
+  "hdskins.error.select": "Suche zuerst einen Skin aus!",
   "hdskins.error.mojang": "Mojang API Fehler",
-  "hdskins.error.mojang.wait": "Bitte warte %d minuten",
-  "hdskins.error.noserver": "Es ist kein gültiges Skin Server verfügbar",
-  "hdskins.open.title": "Suche dir ein skin aus",
-  "hdskins.save.title": "Wo soll dieses gegen gespeichert werden",
-  "hdskins.fetch": "Rufe Skin ab...",
-  "hdskins.failed": "Hochladen des Skins fehlgeschlagen",
-  "hdskins.request": "Sende Anfrage zu Server bitte warten...",
-  "hdskins.upload": "Skin wird hochgeladen bitte warten...",
+  "hdskins.error.mojang.wait": "Bitte warte %d Minute(n)",
+  "hdskins.error.noserver": "Es sind keine gültigen Skinserver verfügbar!",
+  "hdskins.error.offline": "- Server ist Offline -",
+  "hdskins.error.session": "Ungültige Sitzung: Bitte starten Sie Minecraft neu.",
+  "hdskins.open.title": "Skin wählen",
+  "hdskins.directory.up": "Überverzeichnis",
+  "hdskins.directory.go": "->",
+  "hdskins.directory.save": "Speichern",
+  "hdskins.filetype.directory": "Ordner",
+  "hdskins.filetype.file": "%s Datei",
+  "hdskins.filetype.unknown": "Datei",
+  "hdskins.save.title": "Wähle einen Speicherort aus",
+  "hdskins.save.overwrite": "Datei überschreiben?",
+  "hdskins.fetch": "Skin abrufen...",
+  "hdskins.failed": "Hochladen vom Skin ist fehlgeschlagen!",
+  "hdskins.request": "Sende Anfrage zu Skinserver, bitte warten...",
+  "hdskins.upload": "Skin wird hochgeladen, bitte warten...",
   "hdskins.local": "Lokaler Skin",
+  "hdskins.server": "Server Skin",
+  "hdskins.mode.steve": "Steve Model",
+  "hdskins.mode.alex": "Alex Model",
+  "hdskins.mode.skin": "Spielertextur",
+  "hdskins.mode.cape": "Umhangtextur",
+  "hdskins.mode.elytra": "Elytratextur",
   "hdskins.mode.stand": "Stehen",
   "hdskins.mode.sleep": "Schlafen",
   "hdskins.mode.ride": "Reiten",
+  "hdskins.mode.swim": "Schwimmen",
+  "hdskins.mode.riptide": "Sog benutzen",
+  "hdskins.equipment": "Ausrüstung: %s",
+  "hdskins.equipment.empty": "Nichts",
+  "hdskins.equipment.leather": "Lederrüstung",
+  "hdskins.equipment.iron": "Eisenrüstung ",
+  "hdskins.equipment.gold": "Goldrüstung",
+  "hdskins.equipment.diamond": "Diamantrüstung",
+  "hdskins.equipment.netherite": "Netheriterüstung",
+  "hdskins.equipment.turtle": "Schildkrötenpanzer",
+  "hdskins.options.chevy": ">>",
   "hdskins.options.chevy.title": "Skin Hochladen",
+  "hdskins.options.download": "<<",
   "hdskins.options.download.title": "Skin Speichern",
-  "hdskins.options.close": "Zurück",
-  "hdskins.options.clear": "Entfernen",
+  "hdskins.options.close": "Schließen",
+  "hdskins.options.clear": "Löschen",
   "hdskins.options.browse": "Suchen",
-  "hdskins.options.cache": "Bereinige Temporären Skin speicher (cache)",
-  "hdskins.warning.experimental": "§6WARNUNG: diese Funktion ist §4experimental§6, Das heißt falls es passt nicht richtig funktioniert, oder kaputt geht bist du selber verantwortlich",
-  "hdskins.warning.disabled.description": "§4(DEAKTIVIERT)\n§7diese Funktion wird von deinem aktuellen Skin Server nicht unterstützt.\n§7Bitte suche dir einen anderen Server um Fortzufahren"
+  "hdskins.options.skindrops": "Experimenteller Skin Drop",
+  "hdskins.options.cache": "Skin Cache Bereinigen",
+  "hdskins.warning.experimental": "§6WARNUNG: Dieses Feature ist §4Experimentel!§6, was heißt Dinge können (und werden) schief gehen! Mit der Aktivierung bestätigst du, Verantwortung für dich, und deine Tiere zu übernehmennehmen.",
+  "hdskins.warning.disabled.title": "§c%s %s",
+  "hdskins.warning.disabled.description": "§4(DEAKTIVIERT)\n§7Dieses Feature wird nicht von deinem Skinserver ünterstützt.\n§7 Bitte wähle einen anderen Server."
 }
