--- a/src/main/resources/assets/hdskins/lang/ru_ru.json
+++ b/src/main/resources/assets/hdskins/lang/ru_ru.json
@@ -1,51 +1,62 @@
 {
   "hdskins.choose": "Выберите файл",
-  "hdskins.manager": "Помощник по работе со скинами",
+  "hdskins.manager": "Менеджер скинов",
   "hdskins.error.unreadable": "Не удалось прочитать файл",
   "hdskins.error.ext": "Файл должен быть в формате .png",
   "hdskins.error.open": "Ошибка при открытии файла скина",
+  "hdskins.error.invalid.too_large": "Скин должен быть размером максимум 1024 пикселя",
+  "hdskins.error.invalid.shape": "Неверный формат",
+  "hdskins.error.invalid.power_of_two": "Неверные размеры",
   "hdskins.error.invalid": "Неверный файл скина",
   "hdskins.error.select": "Пожалуйста, сначала выберите скин",
   "hdskins.error.mojang": "Ошибка Mojang API",
   "hdskins.error.mojang.wait": "Пожалуйста, подождите %d минут(ы)...",
-  "hdskins.error.noserver": "Не найдено ни одного скин-сервера",
+  "hdskins.error.noserver": "Сервера скинов не обнаружены",
   "hdskins.error.offline": "- Сервер не в сети -",
-  "hdskins.open.title": "Выберите ваш скин",
-  "hdskins.save.title": "Выберите имя файла для сохранения...",
+  "hdskins.error.session": "Недействительная сессия: Перезапустите игру и лаунчер",
+  "hdskins.open.title": "Выберите скин",
+  "hdskins.directory.up": "Вверх",
+  "hdskins.directory.go": "->",
   "hdskins.directory.save": "Сохранить",
-  "hdskins.directory.up": "Родительский каталог",
   "hdskins.filetype.directory": "Каталог",
-  "hdskins.filetype.file": "%s-файл",
+  "hdskins.filetype.file": "Файл %s",
   "hdskins.filetype.unknown": "Файл",
+  "hdskins.save.title": "Выберите имя файла для сохранения...",
+  "hdskins.save.overwrite": "Перезаписать файл?",
   "hdskins.fetch": "Скачивание скина...",
   "hdskins.failed": "Загрузка скина не удалась",
-  "hdskins.request": "Отправка запроса на сервер, пожалуйста, подождите.",
-  "hdskins.upload": "Загрузка скина, пожалуйста, подождите.",
+  "hdskins.request": "Отправка запроса на сервер, пожалуйста, подождите...",
+  "hdskins.upload": "Загрузка скина, пожалуйста, подождите...",
   "hdskins.local": "Локальный скин",
   "hdskins.server": "Скин на сервере",
-  "hdskins.mode.steve": "Стандартная модель",
-  "hdskins.mode.alex": "Тонконогая модель",
+  "hdskins.mode.steve": "Модель Стива",
+  "hdskins.mode.alex": "Модель Алекс",
   "hdskins.mode.skin": "Скин игрока",
   "hdskins.mode.cape": "Текстура плаща",
   "hdskins.mode.elytra": "Текстура надкрылий",
-  "hdskins.mode.stand": "Обычная поза",
-  "hdskins.mode.sleep": "Поза сна",
-  "hdskins.mode.ride": "Сидячая поза",
-  "hdskins.mode.swim": "Поза плавания",
+  "hdskins.mode.stand": "Стоящий на месте",
+  "hdskins.mode.sleep": "Спящий",
+  "hdskins.mode.ride": "Верховая езда",
+  "hdskins.mode.swim": "Плавание",
+  "hdskins.mode.riptide": "Использование Тягуна",
   "hdskins.equipment": "Экипировка: %s",
-  "hdskins.equipment.diamond": "Алмазная броня",
   "hdskins.equipment.empty": "Отсутствует",
-  "hdskins.equipment.gold": "Золотая броня",
-  "hdskins.equipment.iron": "Железная броня",
   "hdskins.equipment.leather": "Кожаная броня",
+  "hdskins.equipment.iron": "Железная броня",
+  "hdskins.equipment.gold": "Золотая броня",
+  "hdskins.equipment.diamond": "Алмазная броня",
+  "hdskins.equipment.netherite": "Незеритовая броня",
   "hdskins.equipment.turtle": "Черепаший панцирь",
+  "hdskins.options.chevy": ">>",
   "hdskins.options.chevy.title": "Загрузить скин",
+  "hdskins.options.download": "<<",
   "hdskins.options.download.title": "Скачать скин",
   "hdskins.options.close": "Закрыть",
   "hdskins.options.clear": "Удалить скин",
   "hdskins.options.browse": "Выбрать",
   "hdskins.options.skindrops": "Экспериментальное перетаскивание скина",
-  "hdskins.options.cache": "Очистить кеш скинов",
+  "hdskins.options.cache": "Очистить кэш скинов",
   "hdskins.warning.experimental": "§6ВНИМАНИЕ: Эта функция §4экспериментальная§6, что означает, что вещи могут начать ломаться, извиваться или даже захлёбываться. При её включении авторы сего текста не несут ответственности за возможные последствия.",
-  "hdskins.warning.disabled.description": "§4(ОТКЛЮЧЕНО)\n§7Данная опция не поддерживается текущим скин-сервером.\n§7Пожалуйста, выберите другой скин-сервер."
+  "hdskins.warning.disabled.title": "§c%s %s",
+  "hdskins.warning.disabled.description": "§4(ОТКЛЮЧЕНО)\n§7Данная опция не поддерживается выбранным сервером.\n§7Пожалуйста, выберите другой сервер."
 }
