Lots of cleanup and streamlining of things, and adding support for skin servers that allow switching between previously uploaded skins

--- a/src/main/resources/assets/hdskins/lang/en_us.json
+++ b/src/main/resources/assets/hdskins/lang/en_us.json
@@ -14,6 +14,7 @@
   "hdskins.error.noserver": "There was no valid skin server available",
   "hdskins.error.offline": "- Server Offline -",
   "hdskins.error.session": "Invalid session: Please try restarting Minecraft",
+  "hdskins.status.busy": "Working...",
   "hdskins.open.title": "Choose skin",
   "hdskins.directory.up": "Parent Directory",
   "hdskins.directory.go": "->",
@@ -27,8 +28,8 @@
   "hdskins.failed": "Uploading skin failed",
   "hdskins.request": "Sending request to server please wait...",
   "hdskins.upload": "Uploading skin please wait...",
-  "hdskins.local": "Local Skin",
-  "hdskins.server": "Server Skin",
+  "hdskins.local": "Preview",
+  "hdskins.server": "Current Skin",
   "hdskins.mode.steve": "Steve Model",
   "hdskins.mode.alex": "Alex Model",
   "hdskins.mode.skin": "Player Texture",
