Fixed error when loading profiles with unsupported skin types

--- a/src/main/resources/assets/hdskins/lang/de_de.json
+++ b/src/main/resources/assets/hdskins/lang/de_de.json
@@ -31,9 +31,9 @@
   "hdskins.server": "Server Skin",
   "hdskins.mode.steve": "Steve Model",
   "hdskins.mode.alex": "Alex Model",
-  "hdskins.mode.skin": "Spielertextur",
-  "hdskins.mode.cape": "Umhangtextur",
-  "hdskins.mode.elytra": "Elytratextur",
+  "skin_type.minecraft.skin": "Spielertextur",
+  "skin_type.minecraft.cape": "Umhangtextur",
+  "skin_type.minecraft.elytra": "Elytratextur",
   "hdskins.mode.stand": "Stehen",
   "hdskins.mode.sleep": "Schlafen",
   "hdskins.mode.ride": "Reiten",
