--- a/src/main/resources/assets/hdskins/lang/ru_ru.json
+++ b/src/main/resources/assets/hdskins/lang/ru_ru.json
@@ -31,9 +31,9 @@
   "hdskins.server": "Скин на сервере",
   "hdskins.mode.steve": "Модель Стива",
   "hdskins.mode.alex": "Модель Алекс",
-  "hdskins.mode.skin": "Скин игрока",
-  "hdskins.mode.cape": "Текстура плаща",
-  "hdskins.mode.elytra": "Текстура надкрылий",
+  "skin_type.minecraft.skin": "Скин игрока",
+  "skin_type.minecraft.cape": "Текстура плаща",
+  "skin_type.minecraft.elytra": "Текстура надкрылий",
   "hdskins.mode.stand": "Стоящий на месте",
   "hdskins.mode.sleep": "Спящий",
   "hdskins.mode.ride": "Верховая езда",
