--- a/src/main/resources/assets/hdskins/lang/sr_rs.json
+++ b/src/main/resources/assets/hdskins/lang/sr_rs.json
@@ -32,9 +32,9 @@
   "hdskins.server": "Trenutni Skin",
   "hdskins.mode.steve": "Steve Model",
   "hdskins.mode.alex": "Alex Model",
-  "hdskins.mode.skin": "Tekstura Igrača",
-  "hdskins.mode.cape": "Cape Tekstura",
-  "hdskins.mode.elytra": "Elytra Tekstura",
+  "skin_type.minecraft.skin": "Tekstura Igrača",
+  "skin_type.minecraft.cape": "Cape Tekstura",
+  "skin_type.minecraft.elytra": "Elytra Tekstura",
   "hdskins.mode.stand": "Stajanje",
   "hdskins.mode.sleep": "Spavanje",
   "hdskins.mode.ride": "Jahanje",
