--- a/src/main/resources/assets/hdskins/lang/zh_cn.json
+++ b/src/main/resources/assets/hdskins/lang/zh_cn.json
@@ -29,9 +29,9 @@
   "hdskins.server": "服务器皮肤",
   "hdskins.mode.steve": "Steve 模型",
   "hdskins.mode.alex": "Alex 模型",
-  "hdskins.mode.skin": "玩家贴图",
-  "hdskins.mode.cape": "披风贴图",
-  "hdskins.mode.elytra": "鞘翅贴图",
+  "skin_type.minecraft.skin": "玩家贴图",
+  "skin_type.minecraft.cape": "披风贴图",
+  "skin_type.minecraft.elytra": "鞘翅贴图",
   "hdskins.mode.stand": "站立",
   "hdskins.mode.sleep": "睡觉",
   "hdskins.mode.ride": "骑乘",
