--- a/src/main/resources/assets/hdskins/lang/en_us.json
+++ b/src/main/resources/assets/hdskins/lang/en_us.json
@@ -32,9 +32,9 @@
   "hdskins.server": "Current Skin",
   "hdskins.mode.steve": "Steve Model",
   "hdskins.mode.alex": "Alex Model",
-  "hdskins.mode.skin": "Player Texture",
-  "hdskins.mode.cape": "Cape Texture",
-  "hdskins.mode.elytra": "Elytra Texture",
+  "skin_type.minecraft.skin": "Player Texture",
+  "skin_type.minecraft.cape": "Cape Texture",
+  "skin_type.minecraft.elytra": "Elytra Texture",
   "hdskins.mode.stand": "Standing",
   "hdskins.mode.sleep": "Sleeping",
   "hdskins.mode.ride": "Riding",
