Catch some exceptions when typing in a path manually and add a check for whether the chosen location is writeable

--- a/src/main/resources/assets/hdskins/lang/en_us.json
+++ b/src/main/resources/assets/hdskins/lang/en_us.json
@@ -24,6 +24,7 @@
   "hdskins.filetype.unknown": "File",
   "hdskins.save.title": "Choose save location",
   "hdskins.save.overwrite": "Overwrite file?",
+  "hdskins.save.readonly": "Location is read-only. Would you like to write to the .minecraft folder instead?",
   "hdskins.fetch": "Fetching skin...",
   "hdskins.failed": "Uploading skin failed",
   "hdskins.request": "Sending request to server please wait...",
