Add a prompt to open the file after saving it

--- a/src/main/resources/assets/hdskins/lang/en_us.json
+++ b/src/main/resources/assets/hdskins/lang/en_us.json
@@ -24,7 +24,8 @@
   "hdskins.filetype.unknown": "File",
   "hdskins.save.title": "Choose save location",
   "hdskins.save.overwrite": "Overwrite file?",
-  "hdskins.save.readonly": "Location is read-only. Would you like to write to the .minecraft folder instead?",
+  "hdskins.save.readonly": "We cannot write to this folder. Would you like to save to the game directory instead?",
+  "hdskins.save.completed": "File has been saved. Would you like to open it now?",
   "hdskins.fetch": "Fetching skin...",
   "hdskins.failed": "Uploading skin failed",
   "hdskins.request": "Sending request to server please wait...",
