--- a/src/main/resources/assets/hdskins/lang/en_us.json
+++ b/src/main/resources/assets/hdskins/lang/en_us.json
@@ -32,11 +32,15 @@
   "hdskins.upload": "Uploading skin please wait...",
   "hdskins.local": "Preview",
   "hdskins.server": "Current Skin",
+  "hdskins.arm_style": "Arm Shape: %s",
   "hdskins.mode.steve": "Steve Model",
   "hdskins.mode.alex": "Alex Model",
-  "skin_type.minecraft.skin": "Player Texture",
-  "skin_type.minecraft.cape": "Cape Texture",
-  "skin_type.minecraft.elytra": "Elytra Texture",
+  "hdskins.skin_type": "Skin Type: %s",
+  "skin_type.minecraft.skin": "Body",
+  "skin_type.minecraft.cape": "Cape",
+  "skin_type.minecraft.elytra": "Elytra",
+  "skin_type.hdskins.unknown": "Unknown (%s)",
+  "hdskins.mode": "Pose: %s",
   "hdskins.mode.stand": "Standing",
   "hdskins.mode.sleep": "Sleeping",
   "hdskins.mode.ride": "Riding",
@@ -56,6 +60,7 @@
   "hdskins.options.download.title": "Save Skin",
   "hdskins.options.close": "Close",
   "hdskins.options.clear": "Clear",
+  "hdskins.options.clear_all": "Clear All",
   "hdskins.options.browse": "Browse",
   "hdskins.options.skindrops": "Experimental Skin Drop",
   "hdskins.options.cache": "Clear Skin Cache",
