updated german translations

--- a/src/main/resources/assets/hdskins/lang/de_de.json
+++ b/src/main/resources/assets/hdskins/lang/de_de.json
@@ -29,11 +29,15 @@
   "hdskins.upload": "Skin wird hochgeladen, bitte warten...",
   "hdskins.local": "Lokaler Skin",
   "hdskins.server": "Server Skin",
+  "hdskins.arm_style": "Form der Arme: %s",
   "hdskins.mode.steve": "Steve Model",
   "hdskins.mode.alex": "Alex Model",
-  "skin_type.minecraft.skin": "Spielertextur",
-  "skin_type.minecraft.cape": "Umhangtextur",
-  "skin_type.minecraft.elytra": "Elytratextur",
+  "hdskins.skin_type": "Skin Typ: %s",
+  "skin_type.minecraft.skin": "Körper",
+  "skin_type.minecraft.cape": "Umhang",
+  "skin_type.minecraft.elytra": "Elytra",
+  "skin_type.hdskins.unknown": "Unbekannt (%s)",
+  "hdskins.mode": "Pose: %s",
   "hdskins.mode.stand": "Stehen",
   "hdskins.mode.sleep": "Schlafen",
   "hdskins.mode.ride": "Reiten",
@@ -52,7 +56,8 @@
   "hdskins.options.download": "<<",
   "hdskins.options.download.title": "Skin Speichern",
   "hdskins.options.close": "Schließen",
-  "hdskins.options.clear": "Löschen",
+  "hdskins.options.clear": "Skin entfernen",
+  "hdskins.options.clear_all": "Alle Skins entfernen",
   "hdskins.options.browse": "Suchen",
   "hdskins.options.skindrops": "Experimenteller Skin Drop",
   "hdskins.options.cache": "Skin Cache Bereinigen",
