changed to a better translation

--- a/src/main/resources/assets/hdskins/lang/de_de.json
+++ b/src/main/resources/assets/hdskins/lang/de_de.json
@@ -33,7 +33,7 @@
   "hdskins.mode.steve": "Steve Model",
   "hdskins.mode.alex": "Alex Model",
   "hdskins.skin_type": "Skin Typ: %s",
-  "skin_type.minecraft.skin": "Körper",
+  "skin_type.minecraft.skin": "Spieler",
   "skin_type.minecraft.cape": "Umhang",
   "skin_type.minecraft.elytra": "Elytra",
   "skin_type.hdskins.unknown": "Unbekannt (%s)",
